// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lexer Tokens are generated correctly 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 0,
    },
    "_1": "
",
  },
  Object {
    "TAG": 19,
    "_0": Object {
      "char": 4,
    },
    "_1": "Abc",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 8,
    },
    "_1": "d",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 10,
    },
    "_1": "e",
  },
  Object {
    "TAG": 22,
    "_0": Object {
      "char": 11,
    },
  },
  Object {
    "TAG": 21,
    "_0": Object {
      "char": 12,
    },
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 15,
    },
    "_1": " ",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 18,
    },
  },
  Object {
    "TAG": 2,
    "_0": Object {
      "char": 19,
    },
    "_1": "f",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 25,
    },
    "_1": " ",
  },
  Object {
    "TAG": 20,
    "_0": Object {
      "char": 28,
    },
  },
  Object {
    "TAG": 21,
    "_0": Object {
      "char": 29,
    },
  },
  Object {
    "TAG": 20,
    "_0": Object {
      "char": 31,
    },
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 34,
    },
    "_1": "
",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 38,
    },
    "_1": "match",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 44,
    },
    "_1": "g",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 46,
    },
    "_1": "with",
  },
  Object {
    "TAG": 12,
    "_0": Object {
      "char": 51,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 52,
    },
    "_1": "h",
  },
  Object {
    "TAG": 9,
    "_0": Object {
      "char": 53,
    },
  },
  Object {
    "TAG": 5,
    "_0": Object {
      "char": 55,
    },
  },
  Object {
    "TAG": 8,
    "_0": Object {
      "char": 59,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 61,
    },
    "_1": "i",
  },
  Object {
    "TAG": 9,
    "_0": Object {
      "char": 62,
    },
  },
  Object {
    "TAG": 10,
    "_0": Object {
      "char": 64,
    },
  },
  Object {
    "TAG": 2,
    "_0": Object {
      "char": 65,
    },
    "_1": "j",
  },
  Object {
    "TAG": 11,
    "_0": Object {
      "char": 68,
    },
  },
  Object {
    "TAG": 8,
    "_0": Object {
      "char": 69,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 71,
    },
    "_1": "k",
  },
  Object {
    "TAG": 13,
    "_0": Object {
      "char": 72,
    },
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 76,
    },
    "_1": "
  ",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 81,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 82,
    },
    "_1": "k",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 86,
    },
    "_1": "
",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 90,
    },
    "_1": "with",
  },
  Object {
    "TAG": 12,
    "_0": Object {
      "char": 95,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 96,
    },
    "_1": "h",
  },
  Object {
    "TAG": 9,
    "_0": Object {
      "char": 97,
    },
  },
  Object {
    "TAG": 6,
    "_0": Object {
      "char": 99,
    },
  },
  Object {
    "TAG": 8,
    "_0": Object {
      "char": 104,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 106,
    },
    "_1": "l",
  },
  Object {
    "TAG": 9,
    "_0": Object {
      "char": 107,
    },
  },
  Object {
    "TAG": 10,
    "_0": Object {
      "char": 109,
    },
  },
  Object {
    "TAG": 2,
    "_0": Object {
      "char": 110,
    },
    "_1": "m",
  },
  Object {
    "TAG": 8,
    "_0": Object {
      "char": 113,
    },
  },
  Object {
    "TAG": 18,
    "_0": Object {
      "char": 115,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 118,
    },
    "_1": "rest",
  },
  Object {
    "TAG": 11,
    "_0": Object {
      "char": 122,
    },
  },
  Object {
    "TAG": 13,
    "_0": Object {
      "char": 123,
    },
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 127,
    },
    "_1": "
  ",
  },
  Object {
    "TAG": 24,
    "_0": Object {
      "char": 132,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 134,
    },
    "_1": "map",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 138,
    },
    "_1": "rest",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 149,
    },
    "_1": "with",
  },
  Object {
    "TAG": 12,
    "_0": Object {
      "char": 154,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 155,
    },
    "_1": "n",
  },
  Object {
    "TAG": 8,
    "_0": Object {
      "char": 156,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 158,
    },
    "_1": "o",
  },
  Object {
    "TAG": 13,
    "_0": Object {
      "char": 159,
    },
  },
  Object {
    "TAG": 8,
    "_0": Object {
      "char": 160,
    },
  },
  Object {
    "TAG": 3,
    "_0": Object {
      "char": 162,
    },
    "_1": 0,
  },
  Object {
    "TAG": 24,
    "_0": Object {
      "char": 164,
    },
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 167,
    },
    "_1": "
    First ",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 180,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 181,
    },
    "_1": "n",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 185,
    },
    "_1": " ",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 188,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 189,
    },
    "_1": "o",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 193,
    },
    "_1": "
    ",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 201,
    },
    "_1": "with",
  },
  Object {
    "TAG": 12,
    "_0": Object {
      "char": 206,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 207,
    },
    "_1": "n",
  },
  Object {
    "TAG": 8,
    "_0": Object {
      "char": 208,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 210,
    },
    "_1": "o",
  },
  Object {
    "TAG": 13,
    "_0": Object {
      "char": 211,
    },
  },
  Object {
    "TAG": 8,
    "_0": Object {
      "char": 212,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 214,
    },
    "_1": "index",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 222,
    },
    "_1": "
    ",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 229,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 230,
    },
    "_1": "index",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 238,
    },
    "_1": " ",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 241,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 242,
    },
    "_1": "n",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 246,
    },
    "_1": " ",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 249,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 250,
    },
    "_1": "o",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 254,
    },
    "_1": "
  ",
  },
  Object {
    "TAG": 24,
    "_0": Object {
      "char": 259,
    },
  },
  Object {
    "TAG": 20,
    "_0": Object {
      "char": 261,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 262,
    },
    "_1": "map",
  },
  Object {
    "TAG": 24,
    "_0": Object {
      "char": 266,
    },
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 269,
    },
    "_1": "
",
  },
  Object {
    "TAG": 20,
    "_0": Object {
      "char": 273,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 274,
    },
    "_1": "match",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 282,
    },
    "_1": "
",
  },
  Object {
    "TAG": 24,
    "_0": Object {
      "char": 285,
    },
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 285,
    },
  },
  Object {
    "TAG": 4,
    "_0": Object {
      "char": 287,
    },
    "_1": -1.5,
  },
  Object {
    "TAG": 24,
    "_0": Object {
      "char": 292,
    },
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 295,
    },
    "_1": "
{ p %
",
  },
  Object {
    "TAG": 1,
    "_0": Object {
      "char": 304,
    },
    "_1": " \\" \\\\ ",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 311,
    },
    "_1": "
",
  },
  Object {
    "TAG": 1,
    "_0": Object {
      "char": 314,
    },
    "_1": " nested {* comment *} ",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 338,
    },
    "_1": "
",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 341,
    },
  },
  Object {
    "TAG": 2,
    "_0": Object {
      "char": 342,
    },
    "_1": " \\\\ ",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 351,
    },
    "_1": "
",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 354,
    },
  },
  Object {
    "TAG": 2,
    "_0": Object {
      "char": 355,
    },
    "_1": " \\" ",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 364,
    },
    "_1": "
",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 367,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 370,
    },
    "_1": "a",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 374,
    },
    "_1": "
",
  },
  Object {
    "TAG": 1,
    "_0": Object {
      "char": 377,
    },
    "_1": " {q*r ",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 385,
    },
    "_1": "
",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 389,
    },
    "_1": "match",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 395,
    },
    "_1": "t",
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 397,
    },
    "_1": "with",
  },
  Object {
    "TAG": 14,
    "_0": Object {
      "char": 402,
    },
  },
  Object {
    "TAG": 4,
    "_0": Object {
      "char": 403,
    },
    "_1": 1.5,
  },
  Object {
    "TAG": 8,
    "_0": Object {
      "char": 406,
    },
  },
  Object {
    "TAG": 2,
    "_0": Object {
      "char": 408,
    },
    "_1": "2",
  },
  Object {
    "TAG": 15,
    "_0": Object {
      "char": 411,
    },
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 415,
    },
    "_1": "
  ",
  },
  Object {
    "TAG": 28,
    "_0": Object {
      "char": 420,
    },
  },
  Object {
    "TAG": 19,
    "_0": Object {
      "char": 421,
    },
    "_1": "S",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 425,
    },
    "_1": "
",
  },
  Object {
    "TAG": 20,
    "_0": Object {
      "char": 429,
    },
  },
  Object {
    "TAG": 23,
    "_0": Object {
      "char": 430,
    },
    "_1": "match",
  },
  Object {
    "TAG": 0,
    "_0": Object {
      "char": 438,
    },
    "_1": "",
  },
  Object {
    "TAG": 29,
    "_0": Object {
      "char": 438,
    },
  },
]
`;

exports[`Parser Components 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 0,
  },
  Object {
    "TAG": 5,
    "children": Array [
      Array [
        "G",
        Object {
          "TAG": 1,
          "_0": Object {
            "char": 75,
          },
          "_1": Array [
            Object {
              "TAG": 0,
              "_0": "
     h ",
              "_1": 0,
            },
            Object {
              "TAG": 1,
              "default": Object {
                "TAG": 0,
                "_0": Object {
                  "char": 56,
                },
                "_1": "i",
                "_2": 1,
              },
              "loc": Object {
                "char": 55,
              },
              "nullables": Array [],
            },
            Object {
              "TAG": 0,
              "_0": " ",
              "_1": 0,
            },
            Object {
              "TAG": 0,
              "_0": "
   ",
              "_1": 0,
            },
          ],
        },
      ],
      Array [
        "Children",
        Object {
          "TAG": 1,
          "_0": Object {
            "char": 125,
          },
          "_1": Array [
            Object {
              "TAG": 0,
              "_0": "
   k
   ",
              "_1": 0,
            },
            Object {
              "TAG": 5,
              "children": Array [],
              "loc": Object {
                "char": 94,
              },
              "name": "L",
              "props": Array [
                Array [
                  "m",
                  Object {
                    "TAG": 11,
                    "_0": Object {
                      "char": 98,
                    },
                    "_1": Array [
                      Array [
                        "n",
                        Object {
                          "TAG": 12,
                          "_0": Object {
                            "char": 102,
                          },
                          "_1": "o",
                        },
                      ],
                      Array [
                        "p",
                        Object {
                          "TAG": 8,
                          "_0": Object {
                            "char": 108,
                          },
                          "_1": Array [
                            Object {
                              "TAG": 12,
                              "_0": Object {
                                "char": 109,
                              },
                              "_1": "q",
                            },
                          ],
                        },
                      ],
                      Array [
                        "r",
                        Object {
                          "TAG": 12,
                          "_0": Object {
                            "char": 113,
                          },
                          "_1": "r",
                        },
                      ],
                    ],
                  },
                ],
              ],
            },
            Object {
              "TAG": 0,
              "_0": "
",
              "_1": 0,
            },
          ],
        },
      ],
    ],
    "loc": Object {
      "char": 4,
    },
    "name": "A",
    "props": Array [
      Array [
        "b",
        Object {
          "TAG": 12,
          "_0": Object {
            "char": 9,
          },
          "_1": "b",
        },
      ],
      Array [
        "c",
        Object {
          "TAG": 5,
          "_0": Object {
            "char": 16,
          },
          "_1": 1,
        },
      ],
      Array [
        "d",
        Object {
          "TAG": 4,
          "_0": Object {
            "char": 23,
          },
          "_1": "e",
        },
      ],
      Array [
        "f",
        Object {
          "TAG": 3,
          "_0": Object {
            "char": 32,
          },
        },
      ],
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 0,
  },
]
`;

exports[`Parser Mapping 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 0,
  },
  Object {
    "TAG": 3,
    "_0": Object {
      "char": 4,
    },
    "_1": Object {
      "TAG": 12,
      "_0": Object {
        "char": 8,
      },
      "_1": "a",
    },
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 0,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": Object {
                "char": 27,
              },
              "_1": "b",
              "_2": 1,
            },
            "loc": Object {
              "char": 26,
            },
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 0,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 11,
              "_0": Object {
                "char": 15,
              },
              "_1": Array [
                Array [
                  "b",
                  Object {
                    "TAG": 12,
                    "_0": Object {
                      "char": 16,
                    },
                    "_1": "b",
                  },
                ],
              ],
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 0,
  },
  Object {
    "TAG": 3,
    "_0": Object {
      "char": 46,
    },
    "_1": Object {
      "TAG": 12,
      "_0": Object {
        "char": 50,
      },
      "_1": "c",
    },
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 0,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": Object {
                "char": 81,
              },
              "_1": "e",
              "_2": 1,
            },
            "loc": Object {
              "char": 80,
            },
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 0,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 11,
              "_0": Object {
                "char": 60,
              },
              "_1": Array [
                Array [
                  "d",
                  Object {
                    "TAG": 3,
                    "_0": Object {
                      "char": 64,
                    },
                  },
                ],
                Array [
                  "e",
                  Object {
                    "TAG": 12,
                    "_0": Object {
                      "char": 70,
                    },
                    "_1": "e",
                  },
                ],
              ],
            },
          ],
        ],
      },
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 0,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": Object {
                "char": 116,
              },
              "_1": "f",
              "_2": 1,
            },
            "loc": Object {
              "char": 115,
            },
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 0,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 11,
              "_0": Object {
                "char": 94,
              },
              "_1": Array [
                Array [
                  "d",
                  Object {
                    "TAG": 2,
                    "_0": Object {
                      "char": 98,
                    },
                  },
                ],
                Array [
                  "f",
                  Object {
                    "TAG": 12,
                    "_0": Object {
                      "char": 105,
                    },
                    "_1": "f",
                  },
                ],
              ],
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 0,
  },
  Object {
    "TAG": 3,
    "_0": Object {
      "char": 135,
    },
    "_1": Object {
      "TAG": 12,
      "_0": Object {
        "char": 139,
      },
      "_1": "g",
    },
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 0,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": Object {
                "char": 161,
              },
              "_1": "i",
              "_2": 1,
            },
            "loc": Object {
              "char": 160,
            },
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": " ",
            "_1": 0,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": Object {
                "char": 169,
              },
              "_1": "j",
              "_2": 1,
            },
            "loc": Object {
              "char": 168,
            },
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 0,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 11,
              "_0": Object {
                "char": 146,
              },
              "_1": Array [
                Array [
                  "h",
                  Object {
                    "TAG": 12,
                    "_0": Object {
                      "char": 147,
                    },
                    "_1": "h",
                  },
                ],
              ],
            },
            Object {
              "TAG": 12,
              "_0": Object {
                "char": 151,
              },
              "_1": "i",
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 0,
  },
]
`;

exports[`Parser Matching 1`] = `
Array [
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 0,
  },
  Object {
    "TAG": 2,
    "_0": Object {
      "char": 4,
    },
    "_1": Array [
      Object {
        "TAG": 12,
        "_0": Object {
          "char": 10,
        },
        "_1": "a",
      },
    ],
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  b
",
            "_1": 0,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 5,
              "_0": Object {
                "char": 20,
              },
              "_1": 1,
            },
          ],
        ],
      },
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  c
",
            "_1": 0,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 5,
              "_0": Object {
                "char": 37,
              },
              "_1": 2,
            },
          ],
          Array [
            Object {
              "TAG": 5,
              "_0": Object {
                "char": 47,
              },
              "_1": 3,
            },
          ],
        ],
      },
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  d
",
            "_1": 0,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 5,
              "_0": Object {
                "char": 64,
              },
              "_1": 4,
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 0,
  },
  Object {
    "TAG": 2,
    "_0": Object {
      "char": 89,
    },
    "_1": Array [
      Object {
        "TAG": 12,
        "_0": Object {
          "char": 95,
        },
        "_1": "e",
      },
      Object {
        "TAG": 12,
        "_0": Object {
          "char": 98,
        },
        "_1": "f",
      },
    ],
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  ",
            "_1": 0,
          },
          Object {
            "TAG": 1,
            "default": Object {
              "TAG": 0,
              "_0": Object {
                "char": 126,
              },
              "_1": "g",
              "_2": 1,
            },
            "loc": Object {
              "char": 125,
            },
            "nullables": Array [],
          },
          Object {
            "TAG": 0,
            "_0": "
",
            "_1": 0,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 3,
              "_0": Object {
                "char": 108,
              },
            },
            Object {
              "TAG": 11,
              "_0": Object {
                "char": 114,
              },
              "_1": Array [
                Array [
                  "g",
                  Object {
                    "TAG": 12,
                    "_0": Object {
                      "char": 115,
                    },
                    "_1": "g",
                  },
                ],
              ],
            },
          ],
        ],
      },
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  h
",
            "_1": 0,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 2,
              "_0": Object {
                "char": 139,
              },
            },
            Object {
              "TAG": 12,
              "_0": Object {
                "char": 146,
              },
              "_1": "_",
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 0,
  },
  Object {
    "TAG": 2,
    "_0": Object {
      "char": 171,
    },
    "_1": Array [
      Object {
        "TAG": 12,
        "_0": Object {
          "char": 177,
        },
        "_1": "tuple",
      },
      Object {
        "TAG": 12,
        "_0": Object {
          "char": 184,
        },
        "_1": "dict",
      },
    ],
    "_2": Array [
      Object {
        "nodes": Array [
          Object {
            "TAG": 0,
            "_0": "
  m
",
            "_1": 0,
          },
        ],
        "patterns": Array [
          Array [
            Object {
              "TAG": 7,
              "_0": Object {
                "char": 194,
              },
              "_1": Array [
                Object {
                  "TAG": 12,
                  "_0": Object {
                    "char": 195,
                  },
                  "_1": "i",
                },
                Object {
                  "TAG": 4,
                  "_0": Object {
                    "char": 198,
                  },
                  "_1": "j",
                },
              ],
            },
            Object {
              "TAG": 10,
              "_0": Object {
                "char": 204,
              },
              "_1": Array [
                Array [
                  "k",
                  Object {
                    "TAG": 12,
                    "_0": Object {
                      "char": 208,
                    },
                    "_1": "l",
                  },
                ],
              ],
            },
          ],
        ],
      },
    ],
  },
  Object {
    "TAG": 0,
    "_0": "
",
    "_1": 0,
  },
]
`;
